--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <h1>Hello PWA.</h1>
     <img src="./pwa-logo.svg" alt="PWA logo" class="image" />
     <a href="p.html">p.html</a>
+    <a href="p2.html">p2.html</a>
   </body>
 </html>
