--- a/liff.html
+++ b/liff.html
@@ -1,4 +1,4 @@
-<title>Neu Pathee Partner</title>
+<title>New Pathee Partner</title>
 <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
 <script>
   function get_user_id() {
